--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,8 +14,8 @@ html {
 }
 
 body {
-  color: #ffffff;
-  background: #191c1f;
+  color: #C7AF45;
+  background: #10122F;
   --color-primary: #fada3f;
   --color-secondary: #ff2136;
   --color-tertiary: #0294fe;
