--- a/styles/Profile.module.css
+++ b/styles/Profile.module.css
@@ -48,7 +48,7 @@
 .activeTab {
   color: rgba(255, 255, 255, 1);
   border-bottom: 2px solid #0294fe;
-  color: #0294fe;
+  color: #C7AF45;
 }
 
 .tabContent {
