--- a/styles/Profile.module.css
+++ b/styles/Profile.module.css
@@ -3,7 +3,7 @@
 .coverImage {
   width: 100%;
   background-color: #272a2d;
-  height: 300px;
+  height: 200px;
   border-radius: 16px;
 }
 
@@ -46,7 +46,7 @@
 
 .activeTab {
   color: rgba(255, 255, 255, 1);
-  border-bottom: 2px solid #0294fe;
+  border-bottom: 2px solid #c5ba24;
   color: #C7AF45;
 }
 
