--- a/styles/Buy.module.css
+++ b/styles/Buy.module.css
@@ -7,7 +7,7 @@
 }
 
 .nftContainer {
-  width: 17.8%;
+  width: 18%;
   margin: 8px;
   position: relative;
   overflow: hidden;
@@ -56,4 +56,8 @@
   .nftContainer {
     width: 45%;
   }
+}
+.nftItem {
+  min-width: 200px; /* Adjust accordingly */
+  min-height: 200px; /* Adjust accordingly */
 }
