--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -53,7 +53,7 @@
 .heroAssetFrame {
   display: flex;
   justify-content: center;
-  margin: 24px auto 0;
+  margin: 300px auto 0;
   padding: 2em;
   overflow: hidden;
 }
@@ -91,13 +91,13 @@
 
 .heroTitleGradient {
   padding-right: 12px;
-  font-weight: 700;
+  font-weight: 1000;
 }
 
 .heroSubtitle {
   max-width: 640px;
   margin: 0 0 40px;
-  color: hsla(0, 0%, 100%, 0.4);
+  color: hsl(0, 0%, 100%);
   font-size: Min(3.8vw, 20px);
   letter-spacing: 0.3px;
   line-height: 140%;
@@ -347,4 +347,39 @@
   .heroAsset {
     max-height: 540px;
   }
+}
+/* Above 640 and less than 960 */
+@media (min-width: 640px) and (max-width: 960px) {
+  .gradient {
+    margin-top: 196px;
+  }
+
+  .heroTitle {
+    margin-top: -32px;
+    font-size: 60px;
+  }
+
+  .heroAsset {
+    max-height: 540px;
+  }
+}
+/* Buy.module.css */
+.background {
+ 
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1; /* Place the video behind other content */
+}
+
+.backgroundVideo {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+ 
+  top: 0;
+  left: 0;
+  opacity: 0.6; /* Adjust the opacity as needed */
+  z-index: -1; /* Place the video behind other content */
 }
