--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,12 @@
+/* global.css */
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: Inter, Helvetica, Arial, sans-serif;
+  height: 100%;
+  overflow:visible ; /* Prevent page scrolling */
 }
 
 * {
@@ -14,8 +18,8 @@ html {
 }
 
 body {
-  color: #C7AF45;
-  background: #10122F;
+  color: #ffffff;
+  background: #000000;
   --color-primary: #fada3f;
   --color-secondary: #ff2136;
   --color-tertiary: #0294fe;
@@ -23,6 +27,26 @@ body {
   --card-background: #252133;
   --highlighted-background: #202326;
   font-weight: 400;
+  position: relative; /* Set position to relative for the absolute positioning of the video */
+}
+
+/* Add the video styling */
+video {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1; /* Place the video behind other content */
+}
+
+/* Add the overlay div to create the background effect */
+.overlay {
+  position: absolute;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.6); /* Adjust the opacity as needed */
+  z-index: -1; /* Place the overlay behind other content */
 }
 
 h1 {
