--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -91,7 +91,8 @@
 /* Styles for screens less than 720px */
 @media (max-width: 720px) {
   .navContainer {
-    justify-content: space-between; /* Adjust the layout for smaller screens */
+    flex-direction: column; /* Stack elements vertically for smaller screens */
+    align-items: center;
   }
 
   .navMiddle {
@@ -101,11 +102,11 @@
   .link {
     font-size: 18px; /* Decrease font size for smaller screens */
   }
+}
 
-  /* Sreens less than 500px */
-  @media (max-width: 500px) {
-    .navConnect {
-      display: none !important;
-    }
+/* Styles for screens less than 500px */
+@media (max-width: 500px) {
+  .navConnect {
+    display: none !important;
   }
 }
